--- a/02_11_computer_assisted_cutting.html
+++ b/02_11_computer_assisted_cutting.html
@@ -90,8 +90,7 @@ The next lessons can be found on the <a href="http://vimeo.com/fabacademy">Fab A
 <p><img src="./img/02_11_cutting/vinyl/lb_chair.jpg" alt="lb_chair" />  </p>
 
 <p><em>DOWNLOAD</em><br />
-<a href="./files/02_11_cutting/vinyl/lb/lb.7z">Lazy Bastard</a><br />
-<a href="./files/02_11_cutting/vinyl/shtm/shtm.7z">Someone has to mute</a>  </p>
+<a href="./files/02_11_cutting/vinyl/lb/lb.7z">Lazy Bastard</a>  </p>
 
 <h3 id="lasercut">Lasercut</h3>
 
