--- a/02_18_electr_prod.html
+++ b/02_18_electr_prod.html
@@ -82,6 +82,11 @@ That’s the quintessence of wearable device!! :D  </p>
 
 <p><img src="./img/02_18_elect_prod/magnifier.jpg" alt="magnifier" />  </p>
 
+<h3 id="upload-the-firmware">Upload the firmware</h3>
+
+<p>To upload the firmware on the FabISP I need another ISP programmer to bridge the FabISP with computer trough a 6pins ribbon bus.<br />
+I used the firmware used by Andy.</p>
+
 <h2 id="what-ive-done">What I’ve done</h2>
 
 <p>This  </p>
