--- a/assignment.html
+++ b/assignment.html
@@ -36,7 +36,7 @@
     <p><a href="./02_18_electr_prod.html"><strong>electronics production (Feb 18)</strong></a>  </p>
   </li>
   <li>
-    <p><strong>3D scanning and printing (Feb 25)</strong>   </p>
+    <p><a href="./02_21_3Dprint_scan.html"><strong>3D scanning and printing (Feb 25)</strong></a>   </p>
   </li>
   <li>
     <p><strong>electronics design (Mar 4)</strong>  </p>
