--- a/final_project.html
+++ b/final_project.html
@@ -25,7 +25,7 @@
 <p><img src="/img/home/concept.jpg" alt="concept" />  </p>
 
 <h3 id="subject">Subject</h3>
-<p>Every modules will be sensible to different kind of ships and will provide usefull informations for an enhanched gameplay.
+<p>Every modules will be sensible to different kind of ships and will provide useful informations for an enhanced gameplay.
 The game will allow to be played as a phisical game, being phisically immersed into the scenario to play the game and moving every piece by hand while the great part of the digital aspects will be “almost-unperceiveble”.  </p>
 
 <p><img src="/img/home/section.jpg" alt="section" />  </p>
