--- a/assignment.html
+++ b/assignment.html
@@ -39,7 +39,7 @@
     <p><a href="./02_21_3Dprint_scan.html"><strong>3D scanning and printing (Feb 25)</strong></a>   </p>
   </li>
   <li>
-    <p>[<strong>electronics design (Mar 4)</strong>[(./03_04_electr_design.html)]  </p>
+    <p><a href="./03_04_electr_design.html"><strong>electronics design (Mar 4)</strong></a>  </p>
   </li>
   <li>
     <p><strong>embedded programming (Mar 11)</strong>  </p>
