--- a/assignment.html
+++ b/assignment.html
@@ -20,68 +20,126 @@
       <p><a href="./assignment.html"><b>Assignments<b/></a> | <a href="./final_project.html"><b>Final Project<b/></a> | <a href="./about.html"><b>About<b/></a> | <a href="./contacts.html"><b>Contact<b/></a></p>
      </div>
      <h2 id="assignments">Assignments</h2>
-<p>Here you’ll find the documentation of my weekly improvements</p>
+<p>Here you’ll find the documentation of my weekly improvements.<br />
+For every assignment you can quickly check its status on the Progress bars.<br />
+The <strong>first bar</strong> shows the status of the mandatory assignment.
+The <strong>second bar</strong> shows the contribute of the specific knowledge to the final project.
+The <strong>third bar</strong> shows how much I’ve done over how much I’d like to do.  </p>
 
 <ol>
   <li>
-    <p><a href="./01_28_princ_n_prac.html"><strong>principles and practices, project management (Jan 28)</strong></a>  </p>
+    <p><a href="./01_28_princ_n_prac.html"><strong>principles and practices, project management (Jan 28)</strong></a><br />
+Progress	#++++++++++#<br />
+         #++++++++++#<br />
+         #+++++_____#  </p>
   </li>
   <li>
-    <p><a href="./02_04_2D3D_CAD.html"><strong>computer-aided design (Feb 4)</strong></a>  </p>
+    <p><a href="./02_04_2D3D_CAD.html"><strong>computer-aided design (Feb 4)</strong></a><br />
+Progress	#++++++++++#<br />
+         #++++++++++#<br />
+         #++++++++__#    </p>
   </li>
   <li>
-    <p><a href="./02_11_computer_assisted_cutting.html"><strong>computer-controlled cutting (Feb 11)</strong></a>  </p>
+    <p><a href="./02_11_computer_assisted_cutting.html"><strong>computer-controlled cutting (Feb 11)</strong></a><br />
+Progress	#++++++++++#<br />
+         #++++++<em>__</em>#<br />
+         #+++++++++_#  </p>
   </li>
   <li>
-    <p><a href="./02_18_electr_prod.html"><strong>electronics production (Feb 18)</strong></a>  </p>
+    <p><a href="./02_18_electr_prod.html"><strong>electronics production (Feb 18)</strong></a><br />
+Progress	#++++++++++#<br />
+         #++++++++++#<br />
+         #++<strong>__</strong>__# </p>
   </li>
   <li>
-    <p><a href="./02_21_3Dprint_scan.html"><strong>3D scanning and printing (Feb 25)</strong></a>   </p>
+    <p><a href="./02_21_3Dprint_scan.html"><strong>3D scanning and printing (Feb 25)</strong></a><br />
+Progress	#++++++++++#<br />
+         #++<strong>__</strong>__#<br />
+         #++++++++++#  </p>
   </li>
   <li>
-    <p><a href="./03_04_electr_design.html"><strong>electronics design (Mar 4)</strong></a>  </p>
+    <p><a href="./03_04_electr_design.html"><strong>electronics design (Mar 4)</strong></a><br />
+Progress	#++++++++++#<br />
+         #++++++++++#<br />
+         #+++<strong>__</strong>_#  </p>
   </li>
   <li>
-    <p><strong>embedded programming (Mar 11)</strong>  </p>
+    <p><a href="./03_11_emb_prog.html"><strong>embedded programming (Mar 11)</strong></a><br />
+Progress	#+++++++<strong><em>#<br />
+         #++++++++++#<br />
+         #</em></strong><strong>__</strong>_#  </p>
   </li>
   <li>
-    <p><strong>computer-controlled machining (Mar 18)</strong>  </p>
+    <p><a href="./03_18_comp_cont_mach.html"><strong>computer-controlled machining (Mar 18)</strong></a>
+Progress	#+++++++++<em>#<br />
+         #++++++++<strong>#<br />
+         #+++</strong></em><em>__</em>#   </p>
   </li>
   <li>
-    <p><strong>molding and casting (Mar 25)</strong>  </p>
+    <p><strong>molding and casting (Mar 25)</strong><br />
+Progress	#++++++++++#<br />
+         #+++++++<strong><em>#<br />
+         #+++++</em></strong>__#   </p>
   </li>
   <li>
-    <p><strong>break (Apr 1)</strong>  </p>
+    <p><strong>input devices (Apr 8)</strong><br />
+Progress	#<strong>__</strong><strong>__#<br />
+         #</strong><strong>__</strong><strong>#<br />
+         #</strong><strong>__</strong>__# </p>
   </li>
   <li>
-    <p><strong>input devices (Apr 8)</strong>  </p>
+    <p><strong>output devices (Apr 15)</strong><br />
+Progress	#<strong>__</strong><strong>__#<br />
+         #</strong><strong>__</strong><strong>#<br />
+         #</strong><strong>__</strong>__# </p>
   </li>
   <li>
-    <p><strong>output devices (Apr 15)</strong>  </p>
+    <p><strong>composites (Apr 22)</strong><br />
+Progress	#<strong>__</strong><strong>__#<br />
+         #</strong><strong>__</strong><strong>#<br />
+         #</strong><strong>__</strong>__# </p>
   </li>
   <li>
-    <p><strong>composites (Apr 22)</strong>  </p>
+    <p><strong>networking and communications (Apr 29)</strong><br />
+Progress	#<strong>__</strong><strong>__#<br />
+         #</strong><strong>__</strong><strong>#<br />
+         #</strong><strong>__</strong>__# </p>
   </li>
   <li>
-    <p><strong>networking and communications (Apr 29)</strong>  </p>
+    <p><strong>mechanical design, machine design (May 6)</strong><br />
+Progress	#<strong>__</strong><strong>__#<br />
+         #</strong><strong>__</strong><strong>#<br />
+         #</strong><strong>__</strong>__# </p>
   </li>
   <li>
-    <p><strong>mechanical design, machine design (May 6)</strong>  </p>
+    <p><strong>interface and application programming (May 13)</strong><br />
+Progress	#<strong>__</strong><strong>__#<br />
+         #</strong><strong>__</strong><strong>#<br />
+         #</strong><strong>__</strong>__# </p>
   </li>
   <li>
-    <p><strong>interface and application programming (May 13)</strong>  </p>
+    <p><strong>applications and implications (May 20)</strong><br />
+Progress	#<strong>__</strong><strong>__#<br />
+         #</strong><strong>__</strong><strong>#<br />
+         #</strong><strong>__</strong>__# </p>
   </li>
   <li>
-    <p><strong>applications and implications (May 20)</strong>  </p>
+    <p><strong>invention, intellectual property, and income (May 27)</strong><br />
+Progress	#<strong>__</strong><strong>__#<br />
+         #</strong><strong>__</strong><strong>#<br />
+         #</strong><strong>__</strong>__# </p>
   </li>
   <li>
-    <p><strong>invention, intellectual property, and income (May 27)</strong>  </p>
+    <p><strong>project development (Jun 3)</strong><br />
+Progress	#<strong>__</strong><strong>__#<br />
+         #</strong><strong>__</strong><strong>#<br />
+         #</strong><strong>__</strong>__# </p>
   </li>
   <li>
-    <p><strong>project development (Jun 3)</strong>  </p>
-  </li>
-  <li>
-    <p><strong>project presentation (Jun 10)</strong>  </p>
+    <p><strong>project presentation (Jun 10)</strong><br />
+Progress	#<strong>__</strong><strong>__#<br />
+         #</strong><strong>__</strong><strong>#<br />
+         #</strong><strong>__</strong>__# </p>
   </li>
 </ol>
 
