--- a/03_25_mold_cast.html
+++ b/03_25_mold_cast.html
@@ -63,7 +63,7 @@ The next lessons can be found on the <a href="http://vimeo.com/fabacademy">Fab A
 <a href="http://imbrium.mit.edu/EXTRAS/CELESTIA/">LOLA - Lunar Orbiter Laser Altimeter</a></p>
 
 <h2 id="design">Design</h2>
-<p>With Rhino I generated a heigh-map it fit in the dimensions of the wax stock with 2mm of difference between highest and lower point.  </p>
+<p>With Rhino I generated a height-map that fit in the wax stock with 2mm of difference between highest and lower point.  </p>
 
 <p><img src="./img/03_25_mold_cast/lunar_soil.jpg" alt="lunar_soil" />  </p>
 
@@ -157,7 +157,7 @@ As you can see the last part has remained with a rough finish, but it will work 
 
 <p><img src="./img/03_25_mold_cast/bicomp.jpg" alt="bicomp" /> </p>
 
-<p>After dry up the mold and coated with releasing agent I <a href="http://www.dailymotion.com/video/x27wqc_cocktail-di-celentano_music">shaked</a> well and vigorously the jers of the components using Tico Tico as base, than I mixed 1 to 1 in volume of Smooth on 325 resin.  </p>
+<p>After dry up the mold and coated with releasing agent I <a href="http://www.dailymotion.com/video/x27wqc_cocktail-di-celentano_music">shaked</a> well and vigorously the jars of the components using Tico Tico as base, than I mixed 1 to 1 in volume of Smooth on 325 resin.  </p>
 
 <p><img src="./img/03_25_mold_cast/shaking.jpg" alt="shaking" /> </p>
 
