--- a/assignment.html
+++ b/assignment.html
@@ -29,117 +29,117 @@ The <strong>third bar</strong> shows how much I’ve done over how much I’d li
 <ol>
   <li>
     <p><a href="./01_28_princ_n_prac.html"><strong>principles and practices, project management (Jan 28)</strong></a><br />
-Progress	#++++++++++#<br />
-         #++++++++++#<br />
-         #+++++_____#  </p>
+#++++++++++#<br />
+#++++++++++#<br />
+#+++++_____#  </p>
   </li>
   <li>
     <p><a href="./02_04_2D3D_CAD.html"><strong>computer-aided design (Feb 4)</strong></a><br />
-Progress	#++++++++++#<br />
-         #++++++++++#<br />
-         #++++++++__#    </p>
+#++++++++++#<br />
+#++++++++++#<br />
+#++++++++__#    </p>
   </li>
   <li>
     <p><a href="./02_11_computer_assisted_cutting.html"><strong>computer-controlled cutting (Feb 11)</strong></a><br />
-Progress	#++++++++++#<br />
-         #++++++<em>__</em>#<br />
-         #+++++++++_#  </p>
+#++++++++++#<br />
+#++++++<em>__</em>#<br />
+#+++++++++_#  </p>
   </li>
   <li>
     <p><a href="./02_18_electr_prod.html"><strong>electronics production (Feb 18)</strong></a><br />
-Progress	#++++++++++#<br />
-         #++++++++++#<br />
-         #++<strong>__</strong>__# </p>
+#++++++++++#<br />
+#++++++++++#<br />
+#++<strong>__</strong>__# </p>
   </li>
   <li>
     <p><a href="./02_21_3Dprint_scan.html"><strong>3D scanning and printing (Feb 25)</strong></a><br />
-Progress	#++++++++++#<br />
-         #++<strong>__</strong>__#<br />
-         #++++++++++#  </p>
+#++++++++++#<br />
+#++<strong>__</strong>__#<br />
+#++++++++++#  </p>
   </li>
   <li>
     <p><a href="./03_04_electr_design.html"><strong>electronics design (Mar 4)</strong></a><br />
-Progress	#++++++++++#<br />
-         #++++++++++#<br />
-         #+++<strong>__</strong>_#  </p>
+#++++++++++#<br />
+#++++++++++#<br />
+#+++<strong>__</strong>_#  </p>
   </li>
   <li>
     <p><a href="./03_11_emb_prog.html"><strong>embedded programming (Mar 11)</strong></a><br />
-Progress	#+++++++<strong><em>#<br />
-         #++++++++++#<br />
-         #</em></strong><strong>__</strong>_#  </p>
+#+++++++<strong><em>#<br />
+#++++++++++#<br />
+#</em></strong><strong>__</strong>_#  </p>
   </li>
   <li>
     <p><a href="./03_18_comp_cont_mach.html"><strong>computer-controlled machining (Mar 18)</strong></a>
-Progress	#+++++++++<em>#<br />
-         #++++++++<strong>#<br />
-         #+++</strong></em><em>__</em>#   </p>
+#+++++++++<em>#<br />
+#++++++++<strong>#<br />
+#+++</strong></em><em>__</em>#   </p>
   </li>
   <li>
-    <p><strong>molding and casting (Mar 25)</strong><br />
-Progress	#++++++++++#<br />
-         #+++++++<strong><em>#<br />
-         #+++++</em></strong>__#   </p>
+    <p><a href="./03_25_mold_cast.html"><strong>molding and casting (Mar 25)</strong></a><br />
+#++++++++++#<br />
+#+++++++<strong><em>#<br />
+#+++++</em></strong>__#   </p>
   </li>
   <li>
     <p><strong>input devices (Apr 8)</strong><br />
-Progress	#<strong>__</strong><strong>__#<br />
-         #</strong><strong>__</strong><strong>#<br />
-         #</strong><strong>__</strong>__# </p>
+#<strong>__</strong><strong>__#<br />
+#</strong><strong>__</strong><strong>#<br />
+#</strong><strong>__</strong>__# </p>
   </li>
   <li>
     <p><strong>output devices (Apr 15)</strong><br />
-Progress	#<strong>__</strong><strong>__#<br />
-         #</strong><strong>__</strong><strong>#<br />
-         #</strong><strong>__</strong>__# </p>
+#<strong>__</strong><strong>__#<br />
+#</strong><strong>__</strong><strong>#<br />
+#</strong><strong>__</strong>__# </p>
   </li>
   <li>
     <p><strong>composites (Apr 22)</strong><br />
-Progress	#<strong>__</strong><strong>__#<br />
-         #</strong><strong>__</strong><strong>#<br />
-         #</strong><strong>__</strong>__# </p>
+#<strong>__</strong><strong>__#<br />
+#</strong><strong>__</strong><strong>#<br />
+#</strong><strong>__</strong>__# </p>
   </li>
   <li>
     <p><strong>networking and communications (Apr 29)</strong><br />
-Progress	#<strong>__</strong><strong>__#<br />
-         #</strong><strong>__</strong><strong>#<br />
-         #</strong><strong>__</strong>__# </p>
+#<strong>__</strong><strong>__#<br />
+#</strong><strong>__</strong><strong>#<br />
+#</strong><strong>__</strong>__# </p>
   </li>
   <li>
     <p><strong>mechanical design, machine design (May 6)</strong><br />
-Progress	#<strong>__</strong><strong>__#<br />
-         #</strong><strong>__</strong><strong>#<br />
-         #</strong><strong>__</strong>__# </p>
+#<strong>__</strong><strong>__#<br />
+#</strong><strong>__</strong><strong>#<br />
+#</strong><strong>__</strong>__# </p>
   </li>
   <li>
     <p><strong>interface and application programming (May 13)</strong><br />
-Progress	#<strong>__</strong><strong>__#<br />
-         #</strong><strong>__</strong><strong>#<br />
-         #</strong><strong>__</strong>__# </p>
+#<strong>__</strong><strong>__#<br />
+#</strong><strong>__</strong><strong>#<br />
+#</strong><strong>__</strong>__# </p>
   </li>
   <li>
     <p><strong>applications and implications (May 20)</strong><br />
-Progress	#<strong>__</strong><strong>__#<br />
-         #</strong><strong>__</strong><strong>#<br />
-         #</strong><strong>__</strong>__# </p>
+#<strong>__</strong><strong>__#<br />
+#</strong><strong>__</strong><strong>#<br />
+#</strong><strong>__</strong>__# </p>
   </li>
   <li>
     <p><strong>invention, intellectual property, and income (May 27)</strong><br />
-Progress	#<strong>__</strong><strong>__#<br />
-         #</strong><strong>__</strong><strong>#<br />
-         #</strong><strong>__</strong>__# </p>
+#<strong>__</strong><strong>__#<br />
+#</strong><strong>__</strong><strong>#<br />
+#</strong><strong>__</strong>__#  </p>
   </li>
   <li>
     <p><strong>project development (Jun 3)</strong><br />
-Progress	#<strong>__</strong><strong>__#<br />
-         #</strong><strong>__</strong><strong>#<br />
-         #</strong><strong>__</strong>__# </p>
+#<strong>__</strong><strong>__#<br />
+#</strong><strong>__</strong><strong>#<br />
+#</strong><strong>__</strong>__#  </p>
   </li>
   <li>
     <p><strong>project presentation (Jun 10)</strong><br />
-Progress	#<strong>__</strong><strong>__#<br />
-         #</strong><strong>__</strong><strong>#<br />
-         #</strong><strong>__</strong>__# </p>
+#<strong>__</strong><strong>__#<br />
+#</strong><strong>__</strong><strong>#<br />
+#</strong><strong>__</strong>__#  </p>
   </li>
 </ol>
 
