--- a/assignment.html
+++ b/assignment.html
@@ -17,7 +17,7 @@
     <h2>David Montenegro</h2>
     <h1><a href="./">FAB ACADEMY 2015</a></h1>
     <div>
-      <p><a href="./assignment.html"><b>Assignments<b/></a> | <a href="./final_project.html"><b>Final Project<b/></a> | <a href="./about.html"><b>About<b/></a> | <a href="./contacts.html"><b>Contact<b/></a></p>
+      <p><a href="./final_project.html"><b>Final Project<b/></a> | <a href="./assignment.html"><b>Assignments<b/></a> | <a href="./download.html"><b>Download<b/></a> | <a href="./about.html"><b>About<b/></a> | <a href="./contacts.html"><b>Contact<b/></a></p>
      </div>
      <h2 id="assignments">Assignments</h2>
 <p>Here you’ll find the documentation of my weekly improvements.<br />
@@ -29,117 +29,117 @@ The <strong>third bar</strong> shows how much I’ve done over how much I’d li
 <ol>
   <li>
     <p><a href="./01_28_princ_n_prac.html"><strong>principles and practices, project management (Jan 28)</strong></a><br />
-#++++++++++#<br />
-#++++++++++#<br />
-#+++++_____#  </p>
+#||||||||||#<br />
+#||||||||||#<br />
+#|||||…..#  </p>
   </li>
   <li>
     <p><a href="./02_04_2D3D_CAD.html"><strong>computer-aided design (Feb 4)</strong></a><br />
-#++++++++++#<br />
-#++++++++++#<br />
-#++++++++__#    </p>
+#||||||||||#<br />
+#||||||||||#<br />
+#||||||||..#    </p>
   </li>
   <li>
     <p><a href="./02_11_computer_assisted_cutting.html"><strong>computer-controlled cutting (Feb 11)</strong></a><br />
-#++++++++++#<br />
-#++++++<em>__</em>#<br />
-#+++++++++_#  </p>
+#||||||||||#<br />
+#||||||….#<br />
+#|||||||||.#  </p>
   </li>
   <li>
     <p><a href="./02_18_electr_prod.html"><strong>electronics production (Feb 18)</strong></a><br />
-#++++++++++#<br />
-#++++++++++#<br />
-#++<strong>__</strong>__# </p>
+#||||||||||#<br />
+#||||||||||#<br />
+#||……..# </p>
   </li>
   <li>
     <p><a href="./02_21_3Dprint_scan.html"><strong>3D scanning and printing (Feb 25)</strong></a><br />
-#++++++++++#<br />
-#++<strong>__</strong>__#<br />
-#++++++++++#  </p>
+#||||||||||#<br />
+#||……..#<br />
+#||||||||||#  </p>
   </li>
   <li>
     <p><a href="./03_04_electr_design.html"><strong>electronics design (Mar 4)</strong></a><br />
-#++++++++++#<br />
-#++++++++++#<br />
-#+++<strong>__</strong>_#  </p>
+#||||||||||#<br />
+#||||||||||#<br />
+#|||…….#  </p>
   </li>
   <li>
     <p><a href="./03_11_emb_prog.html"><strong>embedded programming (Mar 11)</strong></a><br />
-#+++++++<strong><em>#<br />
-#++++++++++#<br />
-#</em></strong><strong>__</strong>_#  </p>
+#|||||||…#<br />
+#||||||||||#<br />
+#……….#  </p>
   </li>
   <li>
     <p><a href="./03_18_comp_cont_mach.html"><strong>computer-controlled machining (Mar 18)</strong></a>
-#+++++++++<em>#<br />
-#++++++++<strong>#<br />
-#+++</strong></em><em>__</em>#   </p>
+#|||||||||.#<br />
+#||||||||..#<br />
+#|||…….#   </p>
   </li>
   <li>
     <p><a href="./03_25_mold_cast.html"><strong>molding and casting (Mar 25)</strong></a><br />
-#++++++++++#<br />
-#+++++++<strong><em>#<br />
-#+++++</em></strong>__#   </p>
+#||||||||||#<br />
+#|||||||…#<br />
+#|||||…..#   </p>
   </li>
   <li>
     <p><strong>input devices (Apr 8)</strong><br />
-#<strong>__</strong><strong>__#<br />
-#</strong><strong>__</strong><strong>#<br />
-#</strong><strong>__</strong>__# </p>
+#……….#<br />
+#……….#<br />
+#……….# </p>
   </li>
   <li>
     <p><strong>output devices (Apr 15)</strong><br />
-#<strong>__</strong><strong>__#<br />
-#</strong><strong>__</strong><strong>#<br />
-#</strong><strong>__</strong>__# </p>
+#……….#<br />
+#……….#<br />
+#……….# </p>
   </li>
   <li>
     <p><strong>composites (Apr 22)</strong><br />
-#<strong>__</strong><strong>__#<br />
-#</strong><strong>__</strong><strong>#<br />
-#</strong><strong>__</strong>__# </p>
+#……….#<br />
+#……….#<br />
+#……….# </p>
   </li>
   <li>
     <p><strong>networking and communications (Apr 29)</strong><br />
-#<strong>__</strong><strong>__#<br />
-#</strong><strong>__</strong><strong>#<br />
-#</strong><strong>__</strong>__# </p>
+#……….#<br />
+#……….#<br />
+#……….# </p>
   </li>
   <li>
     <p><strong>mechanical design, machine design (May 6)</strong><br />
-#<strong>__</strong><strong>__#<br />
-#</strong><strong>__</strong><strong>#<br />
-#</strong><strong>__</strong>__# </p>
+#……….#<br />
+#……….#<br />
+#……….# </p>
   </li>
   <li>
     <p><strong>interface and application programming (May 13)</strong><br />
-#<strong>__</strong><strong>__#<br />
-#</strong><strong>__</strong><strong>#<br />
-#</strong><strong>__</strong>__# </p>
+#……….#<br />
+#……….#<br />
+#……….# </p>
   </li>
   <li>
     <p><strong>applications and implications (May 20)</strong><br />
-#<strong>__</strong><strong>__#<br />
-#</strong><strong>__</strong><strong>#<br />
-#</strong><strong>__</strong>__# </p>
+#……….#<br />
+#……….#<br />
+#……….# </p>
   </li>
   <li>
     <p><strong>invention, intellectual property, and income (May 27)</strong><br />
-#<strong>__</strong><strong>__#<br />
-#</strong><strong>__</strong><strong>#<br />
-#</strong><strong>__</strong>__#  </p>
+#……….#<br />
+#……….#<br />
+#……….#  </p>
   </li>
   <li>
     <p><strong>project development (Jun 3)</strong><br />
-#<strong>__</strong><strong>__#<br />
-#</strong><strong>__</strong><strong>#<br />
-#</strong><strong>__</strong>__#  </p>
+#……….#<br />
+#……….#<br />
+#……….#  </p>
   </li>
   <li>
     <p><strong>project presentation (Jun 10)</strong><br />
-#<strong>__</strong><strong>__#<br />
-#</strong><strong>__</strong><strong>#<br />
-#</strong><strong>__</strong>__#  </p>
+#……….#<br />
+#……….#<br />
+#……….#  </p>
   </li>
 </ol>
 
