applications and implications

--- a/03_11_emb_prog.html
+++ b/03_11_emb_prog.html
@@ -80,6 +80,20 @@ The truth I came along is that playing something for the first time with a hand 
 
 <p>Special thanksgiving to Carlo, Francesca and Giulio to help me with their time and explanation skills :)</p>
 
+<p>Some more resources in italian and in english I’ve found online  </p>
+
+<p>AVR Simulator IDE
+http://www.oshonsoft.com/avr.html</p>
+
+<p>Leonardo Miliani’s blog<br />
+http://www.leonardomiliani.com  </p>
+
+<p>Daniele Alberti’s Blog<br />
+http://www.danielealberti.it</p>
+
+<p>Logica Programmabile<br />
+http://www.logicaprogrammabile.it/arduino-uno-bootloader-chip-atmega328/  </p>
+
 <!---
 ### Microcontroller  
 
@@ -109,10 +123,6 @@ It's the main way it communicates with other devices.
 
 Analog to Digital Converter (ADC)
 -->
-
-<p>some good blog (in italian) where I found some useful info
-http://www.leonardomiliani.com
-http://www.danielealberti.it</p>
 
 <p><img src="./img/03_11_emb_prog/imagename.jpg" alt="imagename" /> </p>
 
