--- a/download.html
+++ b/download.html
@@ -62,7 +62,9 @@ found <a href="http://jekyllthemes.org/themes/solo/">here</a></p>
 
 <p><strong>input devices (Apr 8)</strong>  </p>
 
-<p><strong>output devices (Apr 15)</strong>  </p>
+<p><strong>output devices (Apr 15)</strong><br />
+<a href="./04_15_output/lifetime_v.6.2 - RUOTATO.7z">Boards</a><br />
+<a href="./04_15_output/display5x3.c">Code</a></p>
 
 <p><strong>composites (Apr 22)</strong><br />
 <a href="./04_22_composites/mold.7z">Mold</a><br />
