--- a/assignment.html
+++ b/assignment.html
@@ -21,125 +21,108 @@
      </div>
      <h2 id="assignments">Assignments</h2>
 <p>Here you’ll find the documentation of my weekly improvements.<br />
-For every assignment you can quickly check its status on the Progress bars.<br />
+For every assignment you can quickly check its status on the Progress bar.<br />
 The <strong>first bar</strong> shows the status of the mandatory assignment.
 The <strong>second bar</strong> shows the contribute of the specific knowledge to the final project.
-The <strong>third bar</strong> shows how much I’ve done over how much I’d like to do.  </p>
+<!---
+The **third bar** shows how much I've done over how much I'd like to do. 
+--></p>
 
 <ol>
   <li>
     <p><a href="./01_28_princ_n_prac.html"><strong>principles and practices, project management (Jan 28)</strong></a><br />
 #||||||||||#<br />
-#||||||||||#<br />
-#|||||…..#  </p>
+#||||||||||#  </p>
   </li>
   <li>
     <p><a href="./02_04_2D3D_CAD.html"><strong>computer-aided design (Feb 4)</strong></a><br />
 #||||||||||#<br />
-#||||||||||#<br />
-#||||||||..#    </p>
+#||||||||||#     </p>
   </li>
   <li>
     <p><a href="./02_11_computer_assisted_cutting.html"><strong>computer-controlled cutting (Feb 11)</strong></a><br />
 #||||||||||#<br />
-#||||||….#<br />
-#|||||||||.#  </p>
+#||||||….#   </p>
   </li>
   <li>
     <p><a href="./02_18_electr_prod.html"><strong>electronics production (Feb 18)</strong></a><br />
 #||||||||||#<br />
-#||||||||||#<br />
-#||……..# </p>
+#||||||||||#   </p>
   </li>
   <li>
     <p><a href="./02_21_3Dprint_scan.html"><strong>3D scanning and printing (Feb 25)</strong></a><br />
 #||||||||||#<br />
-#||……..#<br />
-#||||||||||#  </p>
+#|||…….#    </p>
   </li>
   <li>
     <p><a href="./03_04_electr_design.html"><strong>electronics design (Mar 4)</strong></a><br />
 #||||||||||#<br />
-#||||||||||#<br />
-#|||…….#  </p>
+#||||||||||#   </p>
   </li>
   <li>
     <p><a href="./03_11_emb_prog.html"><strong>embedded programming (Mar 11)</strong></a><br />
-#|||||||…#<br />
 #||||||||||#<br />
-#……….#  </p>
+#||||||||||#   </p>
   </li>
   <li>
     <p><a href="./03_18_comp_cont_mach.html"><strong>computer-controlled machining (Mar 18)</strong></a>
-#|||||||||.#<br />
-#||||||||..#<br />
-#|||…….#   </p>
+#||||||||||#<br />
+#||||||||..#    </p>
   </li>
   <li>
     <p><a href="./03_25_mold_cast.html"><strong>molding and casting (Mar 25)</strong></a><br />
 #||||||||||#<br />
-#|||||||…#<br />
-#|||||…..#   </p>
+#||||||||||#    </p>
   </li>
   <li>
     <p><a href="./04_08_input.html"><strong>input devices (Apr 8)</strong></a><br />
 #……….#<br />
-#……….#<br />
-#……….# </p>
+#|||||||…#  </p>
   </li>
   <li>
     <p><strong>output devices (Apr 15)</strong><br />
-#……….#<br />
-#……….#<br />
-#……….# </p>
+#||||||||||#<br />
+#||||||||||#  </p>
   </li>
   <li>
     <p><strong>composites (Apr 22)</strong><br />
 #||||||||||#<br />
-#|………#<br />
-#||||……# </p>
+#|………#   </p>
   </li>
   <li>
     <p><strong>networking and communications (Apr 29)</strong><br />
 #……….#<br />
-#……….#<br />
-#……….# </p>
+#||||||….#  </p>
   </li>
   <li>
     <p><strong>mechanical design, machine design (May 6)</strong><br />
-#……….#<br />
-#……….#<br />
-#……….# </p>
+#||||||||||#<br />
+#……….#   </p>
   </li>
   <li>
     <p><strong>interface and application programming (May 13)</strong><br />
 #……….#<br />
-#……….#<br />
-#……….# </p>
+#|||||||…#   </p>
   </li>
   <li>
     <p><strong>applications and implications (May 20)</strong><br />
-#……….#<br />
-#……….#<br />
-#……….# </p>
+#||||||||||#<br />
+#||||||||||#  </p>
   </li>
   <li>
     <p><strong>invention, intellectual property, and income (May 27)</strong><br />
 #……….#<br />
-#……….#<br />
-#……….#  </p>
+#……….#    </p>
   </li>
   <li>
     <p><strong>project development (Jun 3)</strong><br />
 #……….#<br />
-#……….#<br />
-#……….#  </p>
+#……….#   </p>
   </li>
   <li>
     <p><strong>project presentation (Jun 10)</strong><br />
 #……….#<br />
-#……….#<br />
-#……….#  </p>
+#……….#   </p>
   </li>
 </ol>
 
