img final_project

--- a/final_project.html
+++ b/final_project.html
@@ -21,6 +21,8 @@
      </div>
      <h2 id="project-description">Project Description</h2>
 
+<p><img src="./img/00_final_project/avatar_sketch.jpg" alt="avatar_sketch" />  </p>
+
 <p>A device to better manage our everyday time to help us to not overcommit our lives.<br />
 A simple way to visualize and manage time from a different point of view.
 A non invasive but strongly communicative device to tink about time as a discrete resource instead of a continuous flow. </p>
