--- a/03_11_emb_prog.html
+++ b/03_11_emb_prog.html
@@ -83,7 +83,13 @@ The truth I came along is that playing something for the first time with a hand 
 <p>Some more resources in italian and in english I’ve found online  </p>
 
 <p>AVR Simulator IDE
-http://www.oshonsoft.com/avr.html</p>
+http://www.oshonsoft.com/avr.html  </p>
+
+<p>GUI Software for USBasp based USB AVR Programmers
+http://extremeelectronics.co.in/avr-tutorials/gui-software-for-usbasp-based-usb-avr-programmers/</p>
+
+<p>AVR8 Burn-O-Mat: a GUI for AVRdude
+http://avr8-burn-o-mat.aaabbb.de/avr8_burn_o_mat_avrdude_gui_en.php</p>
 
 <p>Leonardo Miliani’s blog<br />
 http://www.leonardomiliani.com  </p>
