--- a/05_20_machine_des.html
+++ b/05_20_machine_des.html
@@ -33,6 +33,95 @@ The next lessons can be found on the <a href="http://vimeo.com/fabacademy">Fab A
  document the group project and your individual contribution**  </p>
 </blockquote>
 
+<h3 id="what-are-we-making">What are we making</h3>
+
+<p>We’ve built a machine to machining rings from modelling wax. It has 4 axes to work over the full surface of the ring.  </p>
+
+<p><img src="" alt="sketch1" /><br />
+<img src="" alt="render1" /><br />
+<img src="" alt="picture1" />  </p>
+
+<p><strong>X axe</strong><br />
+movement: linear<br />
+transmission: belt<br />
+reduction ratio: 1:1 on GT2 Pulley 20 Teeth 8mm Bore  (www.robotdigg.com/product/23/GT2-Pulley-20-Teeth-8mm-Bore)  <br />
+delta X: 60mm  </p>
+
+<p><strong>Y axe</strong><br />
+movement: polar<br />
+transmission: rod<br />
+reduction ratio: 1:1 on <a href="http://www.robotdigg.com/search">Threaded Rod NEMA17, 280mm Tr8*8mm Acme Leadscrew</a><br />
+delta Y: 360°</p>
+
+<p><strong>Z axe</strong><br />
+movement: linear<br />
+transmission: rod<br />
+reduction ratio: 1:1 on <a href="http://www.robotdigg.com/search">Threaded Rod NEMA17, 280mm Tr8*8mm Acme Leadscrew</a>  <br />
+delta Z: 60mm</p>
+
+<p><strong>A axe</strong><br />
+movement: polar<br />
+transmission: belt<br />
+reduction ratio: 1:1 on GT2 Pulley 20 Teeth 8mm Bore  (www.robotdigg.com/product/23/GT2-Pulley-20-Teeth-8mm-Bore)<br />
+delta A: 60°</p>
+
+<p>I’ve managed the operations related with the production: nesting the file for lasercutting, set the cutting parameters, program the production.
+I’ve also designed the Z module over the base designed by Giacomo Falaschi.</p>
+
+<h3 id="nesting">Nesting</h3>
+
+<p>To optimize the operations and waste the minimum amount of material I’ve placed all the pieces on 500x700 layout.  </p>
+
+<h3 id="cutting">Cutting</h3>
+
+<p>We’ve used a Fullspectrum 90W with about 500hr cutting on a 5mm MDF.  </p>
+
+<p>At the beginning I started cutting a two single pieces to test if the fit works.<br />
+The parameters at the first attempt were:  <br />
+   Speed: 50%<br />
+   Power: 100%<br />
+   Current: 100%<br />
+   Passes: 1  </p>
+
+<p>The cut wasn’t visible on the other side, so I cut on the same path twice with just to pass through:
+   Speed: 100%<br />
+   Power: 100%<br />
+   Current: 100%<br />
+   Passes: 1<br />
+But it doesn’t work neither.  </p>
+
+<p>For the last attempt I tried
+   Speed: 30%<br />
+   Power: 100%<br />
+   Current: 100%<br />
+   Passes: 1<br />
+but probably the material was carbonized and so the laser simply can’t burn it more.  </p>
+
+<p><img src="" alt="cut_test_01" /> </p>
+
+<p>So I’ve cut other two pieces with the following settings
+   Speed: 30%<br />
+   Power: 100%<br />
+   Current: 100%
+   Passes: 1  </p>
+
+<p>and  </p>
+
+<p>Speed: 30%<br />
+   Power: 100%<br />
+   Current: 100%
+   Passes: 1 </p>
+
+<p>…and it doesn’t works! So now the hypothesis is that the system of mirrors are a little uncentered, so a lot of energy dissipates somewhere. Trying to cut at </p>
+
+<p>Speed: 30%<br />
+   Power: 100%<br />
+   Current: 100%
+   Passes: 3 </p>
+
+<p>It works fine.</p>
+
+
      
      
 
