--- a/05_13_applic_implic.html
+++ b/05_13_applic_implic.html
@@ -174,10 +174,10 @@ Process		3D print  </p>
 
 <p>It has to meet 3/5 of these requirement:</p>
 
-<p>Step1: the board (led matrix and buttons) works				NOT YET<br />
-Step2: the code for the counters works						NOT YET<br />
+<p>Step1: the board (led matrix and buttons) works				CHECKED<br />
+Step2: the code for the counters works						CHECKED<br />
 Step3: the configuration via FTDI works  					NOT YET<br />
-Step4: the configuration interface works					NOT YET<br />
+Step4: the configuration interface works					CHECKED<br />
 Step5: the parts of the case fits properly among them		CHECKED  </p>
 
 <h3 id="further-developments">Further developments</h3>
