--- a/final_project.html
+++ b/final_project.html
@@ -21,6 +21,8 @@
      </div>
      <h2 id="final-project">Final project</h2>
 
+<p><img src="./img/00_final_project/20150607_144839.jpg" alt="20150607_144839" />  </p>
+
 <p><img src="./img/00_final_project/presentation.png" alt="presentation" />  </p>
 
 <p>A device to better manage our everyday time to help us to not overcommit our lives.<br />
@@ -227,7 +229,7 @@ The wax master needs much more attention because of the two shell and the long t
 
 <p><img src="./img/00_final_project/making_silicone_molds.jpg" alt="making_silicone_molds" />  </p>
 
-<p><img src="./img/00_final_project/hightemp_mold2.png" alt="hightemp_mold2" />  </p>
+<p><img src="./img/00_final_project/hightemp_mold2.jpg" alt="hightemp_mold2" />  </p>
 
 <p><img src="./img/00_final_project/molds.jpg" alt="molds" />  </p>
 
@@ -296,11 +298,9 @@ Once cured I opened the mold and this was the result  </p>
 <p><strong>Download</strong><br />
 <a href="./files/00_final_proj/case.7z">Case</a>  </p>
 
-<p><strong>Add link to download files HERE: upper_shell, lower_shell, uppershell_mold_up, uppershell_mold_down, lowershell_mold</strong>  </p>
-
 <h3 id="watchstrap">Watchstrap</h3>
 
-<p>It has been realized in one piece of leather 1,5mm tick. The idea is very simple: avoid to use glue or sawing machine.<br />
+<p>It has been made in one piece of leather 1,5mm tick. The idea is very simple: avoid to use glue or sawing machine.<br />
 The design is very bold because of the size of the case, but it may shrink accordingly with the next versions of the case.  anyway, to maintain that constrains it can’t be shrunk behind some physical limit: every fold takes some millimeter and to make the hinge it needs some space so I wouldn’t make a more narrow watchstrap without reducing also the thickness of the lather.  </p>
 
 <p><img src="./img/00_final_project/watch_strap.jpg" alt="watch_strap" />  </p>
@@ -495,12 +495,16 @@ unsigned short int to = ledPin(led[ledNumber][1]);
 
 <p>Now the <em>main()</em> and the <em>while(1)</em> functions can run; they simply look at the PA7pin for the button and change the value of the <em>icounter</em> variable; in the meanwhile every second an interrupt is triggered and 1 second subtracted from the <em>timeResid[icounter]</em> and a series of leds shows this info blinking as fast that they seems steady.</p>
 
+<iframe width="420" height="315" src="https://www.youtube.com/embed/MNpGTgpx0u8" frameborder="0" allowfullscreen=""></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/EjHYWfSjw2E" frameborder="0" allowfullscreen=""></iframe>
+
 <p><strong>Download</strong><br />
 <a href=".files/00_final_proj/code.7z">LifeTime_v.4</a></p>
 
 <h3 id="web-application">Web Application</h3>
 
-<p>I started from this tutorial
+<p>I started from this tutorial<br />
 http://fabacademy.org/archives/2015/doc/networking-esp8266.html</p>
 
 <p>It’s a linear system that uses a HTML webpage using Javascript tu manipulate data. It’s based on Python and it needs these packages: PySerial, Multiprocessing and Tornado Webserver.</p>
@@ -614,7 +618,7 @@ $("#needs_val").change(function(){
 </code></pre>
 
 <p><strong>main.js</strong><br />
-		&lt;!DOCTYPE HTML&gt;
+	&lt;!DOCTYPE HTML&gt;
 	&lt;html&gt;
 	&lt;head&gt;
 		<style>
@@ -668,7 +672,16 @@ $("#needs_val").change(function(){
 </code></pre>
 
 <p><strong>Download</strong>
-<a href="./files/00_final_proj/Lifetime_application.7z">Lifetime application</a></p>
+<a href="./files/00_final_proj/Lifetime_application.7z">Lifetime application</a>  </p>
+
+<h3 id="finish">Finish</h3>
+
+<p>At the end I have several parts easy to assemble, customize and upgrade and a device that helps me keeping an eye on the everyday time and focus me on how much time I spent.<br />
+It can be done with more features, with a better finish or a more efficient system to visualize data and drain less energy, but as it is right now it allows me to express with an object a concept not so complex but surely different from the common way we usually intend time.  </p>
+
+<p><img src="./img/00_final_project/20150608_191915.jpg" alt="20150608_191915" />  </p>
+
+<p><img src="./img/00_final_project/20150607_144839.jpg" alt="20150607_144839" />  </p>
 
 <!---
 
