--- a/03_25_mold_cast.html
+++ b/03_25_mold_cast.html
@@ -27,8 +27,8 @@ The next lessons can be found on the <a href="http://vimeo.com/fabacademy">Fab A
 <p>For this week the assignment was  </p>
 
 <blockquote>
-  <p>**
-  design a 3D mold, machine it, and cast parts from it **  </p>
+
+  <p>design a 3D mold, machine it, and cast parts from it  </p>
 </blockquote>
 
 <p>The mind setting is:  </p>
@@ -67,11 +67,11 @@ The next lessons can be found on the <a href="http://vimeo.com/fabacademy">Fab A
 
 <p><img src="./img/03_25_mold_cast/lunar_soil.jpg" alt="lunar_soil" />  </p>
 
-<p>As engrave it may works well, but for a molding I’d like to make something that involves a 3 dimentional shape, so I asked to <a href="https://www.linkedin.com/pub/aurelio-la-ferla/80/900/764">Aurelio La Ferla</a>, a friend of mine really pro in sculpting, to make a moon for me. The file was 450mb! First of all I reduced it to 50mb with MeshLab, following <a href="https://www.youtube.com/watch?v=w_r-cT2jngk">these steps</a> and I made a mold like this.  </p>
+<p>As engrave it may works well, but for a molding I’d like to make something that involves a 3 dimensional shape, so I draw a mood starting from a sphere and using an height map as a displacement map and…the file was 450mb! First of all I reduced it to 50mb with MeshLab, following <a href="https://www.youtube.com/watch?v=w_r-cT2jngk">these steps</a> and I made a mold like this.  </p>
 
 <p><img src="./img/03_25_mold_cast/moon_mold_132k.jpg" alt="moon_mold_132k" /> </p>
 
-<p>50mb was still too much to make the path to mill (the computer has ran out of memory) and so I reduced to 13mb/132kpolygons; in this size it took about 3hrs just to calculate the rough path with Modela Player 4.  </p>
+<p>50mb was still too much to make the path to mill (the computer has ran out of memory) and so I reduced to 13mb/132kpolygons; in this size it took about 3hrs just to calculate the rough path with Modela Player 4.    </p>
 
 <p>While waiting for the path I wonder about the texture of the moon in the almost vertical zone; I think here it will lost a lot of detail because of the orientation of the surface. Than I ran a second process to make a more complex mold made of 6 piece to better print over all the spheric surface. Here some sketch.  </p>
 
@@ -88,9 +88,34 @@ The next lessons can be found on the <a href="http://vimeo.com/fabacademy">Fab A
 <p>I hope I’ll have the material and the time to make also this test.<br />
 Step ahead.</p>
 
+<p><strong>Download</strong><br />
+<a href="./files/03_25_mold_cast/moon_mold_132k_v1.7z">Master milled in wax</a></p>
+
 <h2 id="making-the-master">Making the master</h2>
 
-<p>Mill the master from the wax has taken several hours (about 5hrs for the rough finish with a 5mm flat mill and some more for the finish with the 0.8mm flat mill).</p>
+<p>Mill the master from the wax has taken several hours because of the large volume to mill off (about 5hrs for the rough finish with a 5mm flat mill and some more for the finish with the 1mm flat mill).</p>
+
+<p>To generate the path I used Vectric Cut3D, program with a user friendly GUI that guides you through 7 steps: orientation, material size and margins, roughing toolpath, finish toolpath, cut out, preview, export.  </p>
+
+<p>For the rough toolpath I used:<br />
+	mill: 3mm endmill<br />
+	passdepth: 1mm<br />
+	stepover: 1.5mm<br />
+	feedrate: 40mm/s<br />
+	plungerate: 20mm/sacrificial</p>
+
+<p>and it has taken about 4hrs 16min to finish the job.</p>
+
+<p>For the finish toolpath I used:<br />
+	mill: 1mm endmill<br />
+	passdepth: (auto)<br />
+	stepover: 0.5mm<br />
+	feedrate: 20mm/s<br />
+	plungerate: 10mm/sacrificial  </p>
+
+<p>and it has taken about 2hrs 25min to finish the job.</p>
+
+<p>NOTE: cut3D has a lot of export format but it hasn’t the .rml (the Roland format), but nevermind: if you save in .rol and than rename it in name_of_the_file.rml it will work fine.</p>
 
 <p><img src="./img/03_25_mold_cast/rough.jpg" alt="rough" /> </p>
 
@@ -100,7 +125,7 @@ Step ahead.</p>
 
 <p><img src="./img/03_25_mold_cast/finish3.jpg" alt="finish3" /> </p>
 
-<p>I made one little mistake, but I can’t do differently: I used a too short mill so the shaft touched the vertical walls of the model. It has not produced critical flaws, but the finish was not completed, so the lower part of the wax master was not finished, neither the closure interface. We’ll se later how the model came out and how the mold fits.  </p>
+<p>I made one little mistake, but I can’t do differently: I used a too short mill so the shaft touched the vertical walls of the model. It has not produced critical flaws, but the finish was not completed, so the lower part of the wax master was not finished, neither the closure interface. We’ll see later how the model came out and how the mold fits.  </p>
 
 <h2 id="making-the-mold">Making the mold</h2>
 
