--- a/05_20_machine_des.html
+++ b/05_20_machine_des.html
@@ -88,7 +88,7 @@ delta A: 60°</p>
 
 <p><img src="./img/05_20_mach_des/nesting.jpg" alt="nesting" />  </p>
 
-<p><a href="./files/05_20_mach_des/nesting.pdf">nesting</a>  </p>
+<p><a href="./files/05_20_mach_des/nesting.7z">Nesting files</a>  </p>
 
 <p><em>The machine is actually undder development so on the nesting you can see just the structure; moving parts will came soon.</em></p>
 
