--- a/assignment.html
+++ b/assignment.html
@@ -86,7 +86,7 @@ The bar shows the status of the assignment.</p>
 #||||||||||#  </p>
   </li>
   <li>
-    <p>[<strong>mechanical design, machine design (May 20)]</strong>(./05_20_machine_des.html)<br />
+    <p><a href="./05_20_machine_des.html"><strong>mechanical design, machine design (May 20)</strong></a><br />
 #||||||||||#  </p>
   </li>
   <li>
